@@ -1,7 +1,7 @@
 {
     "name": "OVN_Southbound",
-    "version": "20.13.0",
-    "cksum": "3035725595 25676",
+    "version": "20.14.0",
+    "cksum": "1412040198 25748",
     "tables": {
         "SB_Global": {
             "columns": {
@@ -225,6 +225,7 @@
                 "nat_addresses": {"type": {"key": "string",
                                            "min": 0,
                                            "max": "unlimited"}},
+                "up": {"type": {"key": "boolean", "min": 0, "max": 1}},
                 "external_ids": {"type": {"key": "string",
                                  "value": "string",
                                  "min": 0,
